@@ -8,7 +8,7 @@ import java.util.Arrays;
 import org.xbill.DNS.*;
 
 /**
- * Converts DSA signatures between the SIG record format (as specified
+ * Converts DSA signatures between the RRSIG/SIG record format (as specified
  * in RFC 2536) and the format used by Java DSA routines (DER-encoded).
  *
  * @author Brian Wellington
@@ -25,8 +25,8 @@ private DSASignature() {}
  * Converts the signature field in a SIG record to the
  * format expected by the DSA verification routines.
  */
-static byte []
-create(byte [] sig) {
+public static byte []
+fromDNS(byte [] sig) {
 	final int len = 20;
 	int n = 0;
 	byte rlen, slen, seqlen;
@@ -64,10 +64,10 @@ create(byte [] sig) {
 
 /**
  * Converts the signature generated by DSA signature routines to
- * the one expected inside a SIG record.
+ * the one expected inside an RRSIG/SIG record.
  */
-static byte []
-create(DSAParams params, byte [] sig)
+public static byte []
+toDNS(DSAParams params, byte [] sig)
 throws SignatureException
 {
 	int rLength, sLength;
